add filtteration and solve deploy err
